...
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="0Rw-ab-hro"/>
                                    <constraint firstAttribute="width" constant="50" id="W8x-w6-1rQ"/>
                                </constraints>
                                <state key="normal" title="返回"/>
                                <connections>
                                    <action selector="back:" destination="KYo-Ig-XQL" eventType="touchUpInside" id="A8T-Cu-yNk"/>
                                </connections>
                            </button>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="请输入生成二维码的内容" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="n3W-xG-c2w">
                                <rect key="frame" x="10" y="70" width="355" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="Luc-YQ-djo"/>
...
                                    <outlet property="delegate" destination="xpP-5f-Teq" id="fDA-We-8kA"/>
                                </connections>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vsu-pl-yK4">
                                <rect key="frame" x="117" y="277" width="114" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Login"/>
                                <connections>
                                    <action selector="LoginBtnClick:" destination="xpP-5f-Teq" eventType="touchUpInside" id="xEL-dQ-lvk"/>
                                </connections>
                            </button>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Z40-ac-ent">
                                <rect key="frame" x="87" y="201" width="200" height="30"/>
...
