...

@implementation ViewController

- (void)viewDidLoad {
    [super viewDidLoad];
    // Do any additional setup after loading the view, typically from a nib.
    _dataSourceArray =  @[@"自定义刷新",@"贝塞尔曲线",@"二维码生成和扫描",@"仿创建一条微博的动画",@"仿格瓦拉转场动画",@"选择照片",@"CoreText",@"删除单元格",@"jsonModel",@"YYText",@"entrypt",@"banner",@"PageController",@"UITestVC",@"ShapeLayer",@"RunLoop",@"WKWebView",@"正则校验",@"CirclePercent",@"swift"];
    [self performSelector:@selector(fuction1) withObject:nil afterDelay:3];
    
}

- (void)fuction1{
    
...
